test/corpus/partials/partial-imp.txt
================================================================================
Partials - "imp"
================================================================================
module common {
imp

struct Message {
    String author;
    String content;
};
};
--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (ERROR
        (identifier))
      (struct_definition
        (type_name
          (identifier))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier))))))))
