test/corpus/partials/partial-import-000.txt
================================================================================
Partials - "import"
================================================================================
module common {
import

struct Message {
    String author;
    String content;
};
};
--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (import_declaration
        (ERROR
          (scoped_name
            (identifier))
          (identifier)
          (scoped_name
            (identifier))
          (import_path
            (scoped_name
              (identifier)))
          (identifier))
        (import_path
          (scoped_name
            (identifier)))))
    (ERROR)))
