test/corpus/partials/partial-import-002.txt
================================================================================
Partials - "import other."
================================================================================
module common {
import other.

struct Message {
    String author;
    String content;
};
};
--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (import_declaration
        (import_path
          (scoped_name
            (identifier))))
      (ERROR)
      (struct_definition
        (type_name
          (identifier))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier))))))))
