test/corpus/unit/001-module.txt
================================================================================
Unit - Module
================================================================================
module mod {};
--------------------------------------------------------------------------------
(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body)))
