test/corpus/unit/002-imports.txt
================================================================================
Unit - Imports
================================================================================

module mod {

import another.mymodule.Fail;
import another.module2.*;

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)))))))
