test/corpus/unit/003-typedefs.txt
================================================================================
Unit - Typedefs
================================================================================

module mod {

struct A {};
union B {};
type C = A;
newtype D = A;

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (struct_definition
        (type_name
          (identifier))
        (field_block))
      (union_definition
        (type_name
          (identifier))
        (field_block))
      (type_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier))))
      (newtype_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier)))))))
