test/corpus/unit/005-typedefs-with-fields.txt
================================================================================
Unit - Typedefs - With Fields
================================================================================

module mod {

struct A {
    String name;
    scoped.name.MyType name;
};
union B {
    Void name;
    scoped.name.MyType name;
};

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (struct_definition
        (type_name
          (identifier))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)
                (identifier)
                (identifier)))
            (field_name
              (identifier)))))
      (union_definition
        (type_name
          (identifier))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier)))
          (field
            (type_expression
              (scoped_name
                (identifier)
                (identifier)
                (identifier)))
            (field_name
              (identifier))))))))
