test/corpus/unit/007-kitchen-sink.txt
================================================================================
Unit - Kitchen Sink
================================================================================

module mod {

import another.mymodule.A;
import another.module2.*;

struct A {};
union B {};
type C = A;
newtype D = A;

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier)
            (identifier))))
      (import_declaration
        (import_path
          (scoped_name
            (identifier)
            (identifier))))
      (struct_definition
        (type_name
          (identifier))
        (field_block))
      (union_definition
        (type_name
          (identifier))
        (field_block))
      (type_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier))))
      (newtype_definition
        (type_name
          (identifier))
        (type_expression
          (scoped_name
            (identifier)))))))
