test/corpus/unit/008-json.txt
================================================================================
Unit - JSON
================================================================================

module gnarly.json.module {

annotation PaymentStatusView DbView {
  "withIdPrimaryKey" : true,
  "viewSql": [
    "create view payment_status_view as",
    "select ",
    "		pr.user_id id,",
    "		pr.transaction_id transaction_id,",
    "   pr.id payment_id,",
    "		pr.due_date payment_due_date,",
    "		pr.amount payment_amount,",
    "		pr.events events,",
    "		case when (select count(v->>'v2') > 0 from jsonb_array_elements(pr.events) as v where (v->>'v2')::jsonb ? 'completed') then 'completed'",
    "		     when (select count(v->>'v2') > 0 from jsonb_array_elements(pr.events) as v where (v->>'v2')::jsonb ? 'failed') then 'failed'",
    "		     else null",
    "	    end as status,",
    "	    case when (select count(v->>'v2') > 0 from jsonb_array_elements(pr.events) as v where (v->>'v2')::jsonb ? 'completed') then null",
    "		     when (select count(v->>'v2') > 0 from jsonb_array_elements(pr.events) as v where (v->>'v2')::jsonb ? 'failed') then (current_date - pr.due_date)",
    "		     else null",
    "	    end as days_overdue,",
    "       t.created_at transaction_time,",
    "       (select count(v) > 0 from jsonb_array_elements(pr.failure_events) as v where v->>'accountLocked' is not null) as account_was_locked",
    "from payment_records pr",
    "left outer join transactions t on (pr.transaction_id = t.id)",
    "order by pr.due_date desc;"
  ]
};
annotation PaymentStatusView FormGroupKey "views";

struct OverrideApiUrl {
    StringNE url = "{\"API_URL\":\"https://mobile.banking-app.com/_a\"}";
};

};


--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier)
      (identifier)
      (identifier))
    (module_body
      (annotation_declaration
        (scoped_name
          (identifier))
        (scoped_name
          (identifier))
        (json_value
          (json_object
            (json_object_pair
              (json_string)
              (json_value))
            (json_object_pair
              (json_string)
              (json_value
                (json_array
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))
                  (json_value
                    (json_string))))))))
      (annotation_declaration
        (scoped_name
          (identifier))
        (scoped_name
          (identifier))
        (json_value
          (json_string)))
      (struct_definition
        (type_name
          (identifier))
        (field_block
          (field
            (type_expression
              (scoped_name
                (identifier)))
            (field_name
              (identifier))
            (json_value
              (json_string))))))))
