test/corpus/unit/009-remote-field-annotations.txt
================================================================================
Unit - Remote annotations
================================================================================

module mymodule {

annotation MyStruct FieldAnnotation "";

annotation MyStruct::name FieldAnnotation {
    "field_name": "field_name"
};

annotation other.mymodule.MyStruct DeclAnnotation 1;

annotation JavaPackage "org.adl.runtime.sys.types";

};

--------------------------------------------------------------------------------

(source_file
  (module_definition
    (scoped_name
      (identifier))
    (module_body
      (annotation_declaration
        (scoped_name
          (identifier))
        (scoped_name
          (identifier))
        (json_value
          (json_string)))
      (annotation_declaration
        (scoped_name
          (identifier))
        (field_name
          (identifier))
        (scoped_name
          (identifier))
        (json_value
          (json_object
            (json_object_pair
              (json_string)
              (json_value
                (json_string))))))
      (annotation_declaration
        (scoped_name
          (identifier)
          (identifier)
          (identifier))
        (scoped_name
          (identifier))
        (json_value
          (json_number)))
      (annotation_declaration
        (scoped_name
          (identifier))
        (json_value
          (json_string))))))
